[package]
name = "fensor"
version = "0.1.0"
edition = "2021"
authors = ["code@tinychain.net"]
description = "Hardware-accelerated filesystem-backed dense and sparse tensors"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/haydnv/fensor.git"

keywords = ["ndarray", "tensor", "gpu", "ml", "parallel"]
categories = ["data-structures", "hardware-support", "mathematics"]

[features]
opencl = ["ha-ndarray/opencl"]

[dependencies]
ha-ndarray = { path = "../ha-ndarray" }
