[package]
name = "fensor"
version = "0.1.0"
edition = "2021"
authors = ["code@tinychain.net"]
description = "Hardware-accelerated filesystem-backed dense and sparse tensors"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/haydnv/fensor.git"

keywords = ["ndarray", "tensor", "gpu", "ml", "parallel"]
categories = ["data-structures", "hardware-support", "mathematics"]

[features]
opencl = ["ha-ndarray/opencl"]

[dependencies]
async-trait = "0.1"
b-table = { path = "../b-table", features = ["stream"] }
destream = { path = "../destream" }
freqfs = { path = "../freqfs", features = ["stream"] }
futures = "0.3"
ha-ndarray = { path = "../ha-ndarray", features = ["freqfs", "stream"] }
itertools = "0.10"
number-general = { path = "../number-general", features = ["stream"] }
num_cpus = "1.15"
pin-project = "1.0"
rayon = "1.7"
safecast = { path = "../safecast" }
